# MMT

./: .gitignore  CMakeLists.txt  CurlClient.cpp  CurlClient.h  GmailClient.cpp  GmailClient.h  JsonHandler.cpp  JsonHandler.h  ListOfServices.txt  README.md  client_socket.cpp  client_socket.h  copyListOfServices.txt  copy_application.txt  copy_applications.txt  copy_log.txt  main.cpp  server_socket.cpp  server_socket.h  socket.cpp  socket.h
